[gd_scene load_steps=6 format=2]

[ext_resource path="res://gameplay/gui/pause_menu/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Ubuntu-B.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gui/button/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/panel/panel.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[node name="pause_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="center_container" type="CenterContainer" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="panel" parent="center_container" instance=ExtResource( 4 )]
margin_left = 20.0
margin_top = 280.0
margin_bottom = 680.0
rect_min_size = Vector2( 500, 400 )

[node name="margin_container" type="MarginContainer" parent="center_container/panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="vbox_container" type="VBoxContainer" parent="center_container/panel/margin_container"]
margin_left = 10.0
margin_top = 10.0
margin_right = 490.0
margin_bottom = 390.0
custom_constants/separation = 10

[node name="game_over_label" type="Label" parent="center_container/panel/margin_container/vbox_container"]
margin_right = 480.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "GAME PAUSED"
align = 1
valign = 1

[node name="resume" parent="center_container/panel/margin_container/vbox_container" instance=ExtResource( 3 )]
margin_top = 170.0
margin_right = 480.0
margin_bottom = 270.0
text = "Resume game"

[node name="main_menu" parent="center_container/panel/margin_container/vbox_container" instance=ExtResource( 3 )]
margin_top = 280.0
margin_right = 480.0
margin_bottom = 380.0
text = "Main menu"

[connection signal="pressed" from="center_container/panel/margin_container/vbox_container/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="center_container/panel/margin_container/vbox_container/main_menu" to="." method="_on_main_menu_pressed"]
